# linz

./: .env.example  .gitignore  LICENSE  README.md  SUBMISSION.md  pyproject.toml  requirements.txt
agent/: __init__.py  config.py  execute.py  orchestrator.py  perceive.py  prove.py  reason.py
demo/: attack_simulator.py  check_splunk_ai.py  demo_script.md  run_demo.py  show_reports.py
playbooks/: __init__.py  base.py  block_ip.py  create_ticket.py  isolate_endpoint.py  slack_alert.py
prompts/: report_template.txt  triage_system.txt
splunk/: __init__.py  ai_runtime.py  alert_poller.py  mcp_client.py  report_writer.py
tests/: test_agent.py
tests/mock_alerts/: credential_stuffing.json  port_scan.json  ssh_bruteforce.json
