[project]
name = "linz"
version = "0.1.0"
description = "Autonomous incident response agent for Splunk."
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.52.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
